// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App with session 1`] = `
<div>
  <div
    className="sc-iwsKbI fKYVxP"
  >
    <a
      className="Logo-sc-1wig2db-0 bulBUi"
      href="/"
    >
      GH
    </a>
    <form
      className="sc-gZMcBi ntcEK"
    >
      <label
        htmlFor="input-search-query"
      >
        This repository
      </label>
      <input
        id="input-search-query"
        placeholder="Search"
        type="text"
      />
    </form>
    <nav
      className="sc-gqjmRU ktBMXS"
    >
      <ul>
        <li>
          <a
            to="#"
          >
            Pull requests
          </a>
        </li>
        <li>
          <a
            to="#"
          >
            Issues
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="sc-VigVT cRPVro"
    >
      <ul>
        <li>
          <a
            href="#"
          >
            <i
              className="fa fa-bell"
            />
          </a>
        </li>
        <li>
          <a
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
             
            <i
              className="fa fa-caret-down"
            />
          </a>
        </li>
        <li>
          <a
            onClick={[Function]}
          >
            <img
              alt="%LOGIN%"
              style={
                Object {
                  "backgroundColor": "#ccc",
                  "height": 20,
                  "verticalAlign": "top",
                  "width": 20,
                }
              }
            />
             
            <i
              className="fa fa-caret-down"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
  %CHILDREN%
  <div
    className="InnerContainer___default-yh8td3-0 jfPiqN"
  >
    <div
      className="sc-bdVaJa eXgKiV"
    >
      <ul>
        <li>
          © 2016 keik
        </li>
        <li>
          <a
            href="#"
          >
            Help
          </a>
        </li>
      </ul>
      <a
        className="Logo-sc-1wig2db-0 bulBUi"
        href="#"
      >
        GH
      </a>
      <ul>
        <li>
          <a
            href="#"
          >
            API
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            About
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App without session 1`] = `
<div>
  <div
    className="sc-bxivhb gDYBDp"
  >
    <div
      className="InnerContainer___default-yh8td3-0 sc-ifAKCX jprSTt"
    >
      <a
        className="Logo-sc-1wig2db-0 bulBUi"
        href="/"
      >
        GH
      </a>
      <div
        className="sc-EHOje cdrGxe"
      >
        <form
          className="sc-bZQynM FGYfE"
        >
          <label>
            <input
              className="sc-gzVnrw frldfY"
              placeholder="Search"
            />
          </label>
        </form>
        <a
          className="sc-htoDjs dIBbWc"
          href="/login"
        >
          Sign in
        </a>
        <a
          className="sc-dnqmqq fdWWEX"
          href="/join"
        >
          Sign up
        </a>
      </div>
    </div>
  </div>
  %CHILDREN%
  <div
    className="InnerContainer___default-yh8td3-0 jfPiqN"
  >
    <div
      className="sc-bdVaJa eXgKiV"
    >
      <ul>
        <li>
          © 2016 keik
        </li>
        <li>
          <a
            href="#"
          >
            Help
          </a>
        </li>
      </ul>
      <a
        className="Logo-sc-1wig2db-0 bulBUi"
        href="#"
      >
        GH
      </a>
      <ul>
        <li>
          <a
            href="#"
          >
            API
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            About
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
